solving problems after last commit. The tests are still broken